talent-app/main/default/objects/EvaluationComment__c/EvaluationComment__c.object-meta.xml
<CustomObject>
    <label>EvaluationComment</label>
    <nameField>
        <label>E Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>