talent-app/main/default/objects/EvaluationComment__c/fields/Create_By__c.field-meta.xml
<CustomField>
    <fullName>Create_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Create By</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Evaluation Comment (Create By)</relationshipLabel>
    <relationshipName>Evaluation_Comment1</relationshipName>
    <type>Lookup</type>
</CustomField>