talent-app/main/default/objects/EvaluationComment__c/fields/DateComment__c.field-meta.xml
<CustomField>
    <fullName>DateComment__c</fullName>
    <label>DateComment</label>
    <type>Date</type>
</CustomField>