talent-app/main/default/objects/EvaluationComment__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee ID</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Evaluation Comment</relationshipLabel>
    <relationshipName>Evaluation_Comment</relationshipName>
    <type>Lookup</type>
</CustomField>