talent-app/main/default/objects/EvaluationComment__c/fields/Last_Modified_When__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_When__c</fullName>
    <label>Last Modified When</label>
    <type>DateTime</type>
</CustomField>