talent-app/main/default/objects/EvaluationComment__c/fields/Last_Modified_When_Disp__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_When_Disp__c</fullName>
    <formula>IF( 
ISBLANK(Last_Modified_When__c), 
"", 
TEXT(YEAR(DATEVALUE(Last_Modified_When__c))) + "/" + TEXT(MONTH(DATEVALUE(Last_Modified_When__c))) + "/" +TEXT(DAY(DATEVALUE(Last_Modified_When__c))) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FML Last Modified When</label>
    <type>Text</type>
</CustomField>