talent-app/main/default/objects/EvaluationComment__c/fields/SubDepartment__c.field-meta.xml
<CustomField>
    <fullName>SubDepartment__c</fullName>
    <label>SubDepartment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>